# cmake-project-template

./: .gitignore  CMakeLists.txt  README.md  setup.cmd  setup.command  setup.sh
executable/: CMakeLists.txt
executable/include/executable/: executable_example.hpp
executable/source/: executable_example.cpp
scripts/unix/: generate_gnu_makefiles.sh  generate_xcode_project.sh
scripts/windows/: build_visual_studio_solution.cmd  clean_visual_studio_solution.cmd  generate_visual_studio_solution.cmd
